# FlyCo

./: .gitignore  LICENSE  README.md
perception_predictor/src/mesh_predict/: .gitignore  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  package.xml  requirements.txt  setup.py
perception_predictor/src/mesh_predict/config/cameras/: sim.json
perception_predictor/src/mesh_predict/config/examples/: README.md  mesh_predict.rviz
perception_predictor/src/mesh_predict/config/profiles/: sim.yaml
perception_predictor/src/mesh_predict/config/runtime/: pc_mesh_predict_model.yaml  pc_mesh_predict_model_alternating.yaml  pc_mesh_predict_runtime.yaml  pc_mesh_predict_runtime_alternating.yaml
perception_predictor/src/mesh_predict/examples/: README.md
perception_predictor/src/mesh_predict/examples/launch/: rviz.launch
perception_predictor/src/mesh_predict/launch/: mesh_predict.launch
perception_predictor/src/mesh_predict/resources/checkpoints/: README.md
perception_predictor/src/mesh_predict/scripts/: mesh_predict_node.py
perception_predictor/src/mesh_predict/src/pointnet2_ops/: pointnet2_utils.py
perception_predictor/src/sam_tracking/: .gitignore  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  package.xml  requirements.txt  setup.py
perception_predictor/src/sam_tracking/ckpt/: download_ckpt.sh
perception_predictor/src/sam_tracking/config/: camera.json  camera_realworld.json  cluster.yaml  sam_tk.rviz  tracking.yaml  tracking_no_depth.yaml
perception_predictor/src/sam_tracking/env-hooks/: 50.sam_tracking_pythonpath.bash.in
perception_predictor/src/sam_tracking/launch/: cluster.launch  full_stack.launch  prompt.launch  rviz.launch  tracking.launch  tracking_with_prompt.launch  ui.launch  ui_cv.launch  world_rgb_pointcloud.launch
perception_predictor/src/sam_tracking/nodes/: prompt_node.py  prompt_ui_cv_node.py  prompt_ui_node.py  tracking_node.py  world_rgb_pointcloud_node.py
perception_predictor/src/sam_tracking/src/cluster/: main.cpp  pc_cluster.cpp  pc_utils.cpp  test_cluster_node.cpp
perception_predictor/src/sam_tracking/src/sam_tracking/: __init__.py
planner_simulator/src/airsim_simulator/joy_control/: CMakeLists.txt  package.xml
planner_simulator/src/airsim_simulator/joy_control/launch/: joy_control.launch
planner_simulator/src/airsim_simulator/joy_control/src/: joy_cmd.cpp  joy_control.cpp
planner_simulator/src/flyco_planner_manager/: CMakeLists.txt  package.xml
planner_simulator/src/flyco_planner_manager/config/: FlyCo.rviz
planner_simulator/src/flyco_planner_manager/include/flyco_planner_manager/: flyco_planner_manager.h  logger.hpp
planner_simulator/src/flyco_planner_manager/launch/: rviz.launch
planner_simulator/src/flyco_planner_manager/launch/demo/: flyco_planner_arc.launch  flyco_planner_bahai.launch  flyco_planner_buddha.launch  flyco_planner_castle.launch  flyco_planner_christ.launch  flyco_planner_church.launch  flyco_planner_outpost.launch  flyco_planner_pagoda.launch  flyco_planner_pisa_cathedral.launch  flyco_planner_sacre_coeur.launch  flyco_planner_sant.launch  flyco_planner_schloss.launch  flyco_planner_statue.launch  flyco_planner_temple.launch  flyco_planner_tower.launch  flyco_planner_windmill.launch  param.xml
planner_simulator/src/flyco_planner_manager/launch/modules/: async_planning_fsm.xml  coverage_path_planner.xml  dual_mapping.xml  path_searching.xml  path_solver.xml  skeleton_space_decomposition.xml  viewpoint_constrained_traj_opt.xml  viewpoint_generation.xml
planner_simulator/src/flyco_planner_manager/src/: fc_data_collection.cpp  flyco_planner_manager.cpp  flyco_planner_node.cpp  traj_server.cpp
planner_simulator/src/hierarchical_coverage_planner/: CMakeLists.txt  package.xml
planner_simulator/src/hierarchical_coverage_planner/include/hierarchical_coverage_planner/: fcplanner_pp.h  hcsolver.h  hctraj.h  init_traj.h  local_replan.h  manual_node.h  planner_node.h
planner_simulator/src/hierarchical_coverage_planner/solution/local/: solver_tools.par  solver_tools.tsp  solver_tools.txt
planner_simulator/src/hierarchical_coverage_planner/src/: fcplanner_pp.cpp  hcsolver.cpp  hctraj.cpp  init_traj.cpp  local_replan.cpp  manual_node.cpp  planner_node.cpp
planner_simulator/src/plan_env/: CMakeLists.txt  package.xml
planner_simulator/src/plan_env/config/: slam_rviz.rviz
planner_simulator/src/plan_env/include/plan_env/: map_ros.h  raycast.h  sdf_map.h
planner_simulator/src/plan_env/launch/: rviz.launch  slam_real.launch  slam_sim.launch
planner_simulator/src/plan_env/src/: map_ros.cpp  mapping.cpp  raycast.cpp  sdf_map.cpp
planner_simulator/src/rgb_point_map/: CMakeLists.txt  package.xml
planner_simulator/src/rgb_point_map/check_scene/arc/: model.ply
planner_simulator/src/rgb_point_map/check_scene/bahai/: model.ply
planner_simulator/src/rgb_point_map/check_scene/buddha/: model.ply
planner_simulator/src/rgb_point_map/check_scene/castle/: model.ply
planner_simulator/src/rgb_point_map/check_scene/christ/: model.ply
planner_simulator/src/rgb_point_map/check_scene/church/: model.ply
planner_simulator/src/rgb_point_map/check_scene/outpost/: model.ply
planner_simulator/src/rgb_point_map/check_scene/pagoda/: model.ply
planner_simulator/src/rgb_point_map/check_scene/pisa_cathedral/: model.ply
planner_simulator/src/rgb_point_map/config/: RGBPointMap.rviz
planner_simulator/src/rgb_point_map/launch/: rgb_point_mapping.launch  rviz.launch
planner_simulator/src/rgb_point_map/src/: mapping.cpp  rgb_point_map.cpp  rgb_point_map_utils.cpp
planner_simulator/src/skeleton_decomp/: CMakeLists.txt  package.xml
planner_simulator/src/skeleton_decomp/config/: sk.rviz
planner_simulator/src/skeleton_decomp/fps/: input.txt  output.txt
planner_simulator/src/skeleton_decomp/launch/: sk_exec.launch  sk_rviz.launch
planner_simulator/src/skeleton_decomp/src/: Extra_Del.cpp  adaptive_utils.cpp  sk_decomp.cpp  sk_exec.cpp
planner_simulator/src/viewpoint_manager/: CMakeLists.txt  package.xml
planner_simulator/src/viewpoint_manager/src/: viewpoint_manager.cpp
scripts/: kill.sh  (+1 more)
(+190 files in other folders)
