cmake_minimum_required(VERSION 2.8.3)
project(plan_env)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-std=c++14")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
get_filename_component(PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)

# EMBREE
set(EMBREE_INCLUDE_DIR "${PROJECT_ROOT_DIR}/3rdparty/embree-3/include")
set(EMBREE_LIBRARY "${PROJECT_ROOT_DIR}/3rdparty/embree-3/lib/libembree3.so")
add_compile_options(-I${EMBREE_INCLUDE_DIR})
find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(PCL 1.7 REQUIRED)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  roslib
  std_msgs
  visualization_msgs
  cv_bridge
  message_filters
  quadrotor_msgs
)
find_package(roslib)
find_package(yaml-cpp REQUIRED)

catkin_package(
 INCLUDE_DIRS include
 LIBRARIES plan_env
 CATKIN_DEPENDS roscpp std_msgs quadrotor_msgs
)

include_directories( 
    SYSTEM 
    include 
    ${catkin_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include ${PROJECT_ROOT_DIR}
    ${EIGEN3_INCLUDE_DIR} 
    ${PCL_INCLUDE_DIRS}
    ${OpenCV_INCLUDE_DIRS}
    ${EMBREE_INCLUDE_DIR}
)

link_directories(${PCL_LIBRARY_DIRS})


add_library( plan_env 
    src/sdf_map.cpp 
    src/raycast.cpp
    src/map_ros.cpp
    )
target_link_libraries( plan_env
    ${catkin_LIBRARIES} 
    ${PCL_LIBRARIES}
    ${EMBREE_LIBRARY}
    yaml-cpp
    )  

add_executable( mapping 
    src/mapping.cpp
    src/sdf_map.cpp 
    src/raycast.cpp
    src/map_ros.cpp
    )
target_link_libraries( mapping
    ${catkin_LIBRARIES} 
    ${PCL_LIBRARIES}
    ${EMBREE_LIBRARY}
    yaml-cpp
    )  
